# LLM-Zoomcamp

./: README.md  homework01.ipynb  main.ipynb  pyproject.toml
