[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "google-genai>=2.9.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "toyaikit>=0.0.11",
]
